--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@mui/material-nextjs": "^6.4.3",
+    "@mui/x-date-pickers": "^7.13.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -23,10 +30,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.40",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.7",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
